<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".register.RegisterActivity">
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:cardCornerRadius="100dp"
        app:cardBackgroundColor="#41710B"
        >
        <ImageView

            android:id="@+id/userImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/retrofit_logo"
            />

    </androidx.cardview.widget.CardView>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/adminNameEdt"
        android:hint="@string/user_name"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/adminPhoneEdt"
        android:hint="@string/enter_phone_number"

        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/adminEmailEdt"
        android:hint="@string/enter_user_email"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/adminPasswordEdt"
        android:hint="@string/password"

        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/adminConfirmPasswordEdt"
        android:hint="@string/confirm_password"

        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:id="@+id/registerBtn"
        android:layout_gravity="center"
        />




</LinearLayout>