<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".other_ui.CrudOperationActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        >
        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:id="@+id/menuImage"
            android:src="@drawable/menu_logo"/>
        <TextView
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/welcome_harsh"
            android:textSize="25sp"
            />
        <TextView
            android:layout_marginTop="5dp"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/loginUserName"
            android:textSize="25sp"
            />

    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="4dp"
        android:background="@color/black"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:id="@+id/addUsersTv"
                android:background="#0000EE"
                android:text="@string/add_users"
                android:textColor="@color/white"
                />

        </androidx.cardview.widget.CardView>
        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="30sp"
                android:id="@+id/userListTv"

                android:background="#0000EE"
                android:textColor="@color/white"


                android:text="@string/user_list"/>
        </androidx.cardview.widget.CardView>


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="50dp">

        <TextView
            android:id="@+id/logOutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#0000EE"

            android:text="@string/log_out"
            android:textColor="@color/white"


            android:textSize="30sp" />
    </androidx.cardview.widget.CardView>



</LinearLayout>