<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_marginTop="30dp"
    tools:context=".details.DetailsActivity">
    <ImageView
        android:layout_width="80dp"
        android:layout_height="60dp"
        android:id="@+id/editImage"
        android:src="@drawable/edit_logo"
        android:layout_marginStart="290dp"
        />
<androidx.cardview.widget.CardView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    app:cardCornerRadius="100dp"
    app:cardBackgroundColor="#41710B"
    >
    <ImageView

        android:id="@+id/userImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/default_person_image"
        />

</androidx.cardview.widget.CardView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="0.5"
            android:textSize="20sp"

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/name"
            />
        <TextView
            android:layout_weight="2"
            android:id="@+id/userNameTv"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="0.5"
            android:textSize="20sp"

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/email"
            />
        <TextView
            android:layout_weight="2"
            android:id="@+id/userEmailTv"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="0.5"
            android:textSize="20sp"

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/phone"
            />
        <TextView
            android:layout_weight="2"
            android:id="@+id/userPhoneTv"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_weight="0.5"
            android:textSize="20sp"

            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/address"
            />
        <TextView
            android:layout_weight="2"
            android:id="@+id/userAddressTv"
            android:textSize="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />


    </LinearLayout>




<!--    <LinearLayout-->
<!--        android:layout_marginTop="20dp"-->

<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:orientation="horizontal"-->
<!--        >-->
<!--        <TextView-->
<!--            android:textSize="20sp"-->

<!--            android:layout_weight="1"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:id="@+id/editTv"-->
<!--            android:text="@string/edit"-->
<!--            android:textColor="#0000EE"-->

<!--            />-->
<!--        <TextView-->
<!--            android:textSize="20sp"-->

<!--            android:layout_weight="1"-->
<!--            android:textAlignment="viewEnd"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:id="@+id/deleteTv"-->
<!--            android:text="@string/delete"-->
<!--            android:textColor="#0000EE"-->
<!--            />-->

<!--    </LinearLayout>-->

</LinearLayout>